made changes for Edit passwords

--- a/app/src/main/res/layout/activity_password_edit.xml
+++ b/app/src/main/res/layout/activity_password_edit.xml
@@ -1,9 +1,152 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
+    android:id="@+id/addDetailsFrag"
     android:layout_height="match_parent"
     tools:context=".PasswordEditActivity">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@color/alice_blue">
+
+        <ImageView
+            android:id="@+id/imageViewEdit"
+            android:layout_width="85dp"
+            android:layout_height="83dp"
+            android:layout_marginStart="163dp"
+            android:layout_marginTop="72dp"
+            android:layout_marginEnd="163dp"
+            android:src="@drawable/ic_baseline_no_encryption_24"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <TextView
+            android:id="@+id/appNameEditData"
+            android:layout_width="295dp"
+            android:layout_height="48dp"
+            android:layout_marginStart="61dp"
+            android:layout_marginTop="20dp"
+            android:layout_marginEnd="55dp"
+            android:layout_marginBottom="9dp"
+            android:ems="10"
+            android:gravity="center|start"
+            android:hint="Application Name"
+            android:inputType="textPersonName"
+            android:textColor="@color/black"
+            android:textSize="22sp"
+            android:textStyle="bold"
+            app:layout_constraintBottom_toTopOf="@+id/usernameEditData"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/imageViewEdit" />
+
+        <EditText
+            android:id="@+id/usernameEditData"
+            android:layout_width="296dp"
+            android:layout_height="48dp"
+            android:layout_marginStart="61dp"
+            android:layout_marginTop="9dp"
+            android:layout_marginEnd="54dp"
+            android:layout_marginBottom="13dp"
+            android:ems="10"
+            android:textColor="@color/black"
+            android:hint="UserName OR EmailID"
+            android:inputType="textPersonName"
+            app:layout_constraintBottom_toTopOf="@+id/domainEditDta"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/appNameEditData" />
+
+        <EditText
+            android:id="@+id/domainEditDta"
+            android:layout_width="301dp"
+            android:layout_height="48dp"
+            android:layout_marginStart="61dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="60dp"
+            android:layout_marginBottom="6dp"
+            android:ems="10"
+            android:textColor="@color/black"
+            android:hint="Domain(@gmail.com/@outlook.com)"
+            android:inputType="textPersonName"
+            app:layout_constraintBottom_toTopOf="@+id/passwordEditData"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/usernameEditData" />
+
+        <EditText
+            android:id="@+id/passwordEditData"
+            android:layout_width="297dp"
+            android:layout_height="50dp"
+            android:layout_marginStart="61dp"
+            android:layout_marginTop="4dp"
+            android:layout_marginEnd="35dp"
+            android:layout_marginBottom="9dp"
+            android:ems="10"
+            android:textColor="@color/black"
+            android:hint="Password"
+            app:layout_constraintBottom_toTopOf="@+id/urlAddEditData"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/domainEditDta" />
+
+        <EditText
+            android:id="@+id/urlAddEditData"
+            android:layout_width="309dp"
+            android:layout_height="48dp"
+            android:layout_marginStart="61dp"
+            android:layout_marginTop="9dp"
+            android:layout_marginEnd="41dp"
+            android:ems="10"
+            android:textColor="@color/black"
+            android:hint="URL"
+            android:inputType="textPersonName"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/passwordEditData" />
+
+        <ImageView
+            android:id="@+id/updateData"
+            android:layout_width="77dp"
+            android:layout_height="63dp"
+            android:layout_marginStart="61dp"
+            android:layout_marginTop="37dp"
+            android:layout_marginEnd="24dp"
+            app:layout_constraintEnd_toStartOf="@+id/CloseBtn"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/urlAddEditData"
+            app:srcCompat="@drawable/ic_baseline_fork_right_24" />
+
+        <ImageView
+            android:id="@+id/CloseBtn"
+            android:layout_width="77dp"
+            android:layout_height="63dp"
+            android:layout_marginStart="24dp"
+            android:layout_marginTop="37dp"
+            app:layout_constraintStart_toEndOf="@+id/updateData"
+            app:layout_constraintTop_toBottomOf="@+id/urlAddEditData"
+            app:srcCompat="@drawable/ic_baseline_arrow_back_24" />
+
+        <TextView
+            android:id="@+id/textView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="162dp"
+            android:layout_marginTop="39dp"
+            android:layout_marginEnd="191dp"
+            android:layout_marginBottom="98dp"
+            android:text="Developed by Dheeraj Vemula"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/CloseBtn" />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+</FrameLayout>
