--- a/app/src/main/res/layout/fragment_add_password_details.xml
+++ b/app/src/main/res/layout/fragment_add_password_details.xml
@@ -146,5 +146,19 @@
             app:layout_constraintStart_toEndOf="@+id/CancelData"
             app:layout_constraintTop_toBottomOf="@+id/urlAddNewData" />
 
+        <TextView
+            android:id="@+id/textView2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="112dp"
+            android:layout_marginTop="54dp"
+            android:layout_marginEnd="113dp"
+            android:layout_marginBottom="82dp"
+            android:text="Developed by Dheeraj Vemula"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/CancelData" />
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 </FrameLayout>
