--- a/app/src/main/res/layout/recyclerview_adapter_layout.xml
+++ b/app/src/main/res/layout/recyclerview_adapter_layout.xml
@@ -88,6 +88,7 @@
             android:id="@+id/password"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:inputType="textPassword"
             cardView:layout_constraintStart_toEndOf="@+id/passLabel"
             cardView:layout_constraintTop_toBottomOf="@+id/domain" />
 
@@ -106,6 +107,7 @@
             android:layout_height="wrap_content"
             cardView:layout_constraintStart_toEndOf="@+id/urlLable"
             cardView:layout_constraintTop_toBottomOf="@+id/password" />
+
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
