--- a/app/src/main/res/layout/activity_password_edit.xml
+++ b/app/src/main/res/layout/activity_password_edit.xml
@@ -38,6 +38,7 @@
             android:hint="Application Name"
             android:inputType="textPersonName"
             android:textColor="@color/black"
+            android:textColorHint="@color/dim_gray"
             android:textSize="22sp"
             android:textStyle="bold"
             app:layout_constraintBottom_toTopOf="@+id/usernameEditData"
@@ -54,9 +55,10 @@
             android:layout_marginEnd="54dp"
             android:layout_marginBottom="13dp"
             android:ems="10"
-            android:textColor="@color/black"
             android:hint="UserName OR EmailID"
             android:inputType="textPersonName"
+            android:textColor="@color/black"
+            android:textColorHint="@color/dim_gray"
             app:layout_constraintBottom_toTopOf="@+id/domainEditDta"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -71,9 +73,10 @@
             android:layout_marginEnd="60dp"
             android:layout_marginBottom="6dp"
             android:ems="10"
-            android:textColor="@color/black"
             android:hint="Domain(@gmail.com/@outlook.com)"
             android:inputType="textPersonName"
+            android:textColor="@color/black"
+            android:textColorHint="@color/dim_gray"
             app:layout_constraintBottom_toTopOf="@+id/passwordEditData"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
@@ -89,8 +92,9 @@
             android:layout_marginEnd="35dp"
             android:layout_marginBottom="9dp"
             android:ems="10"
-            android:textColor="@color/black"
             android:hint="Password"
+            android:textColor="@color/black"
+            android:textColorHint="@color/dim_gray"
             app:layout_constraintBottom_toTopOf="@+id/urlAddEditData"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
@@ -105,9 +109,10 @@
             android:layout_marginTop="9dp"
             android:layout_marginEnd="41dp"
             android:ems="10"
-            android:textColor="@color/black"
             android:hint="URL"
             android:inputType="textPersonName"
+            android:textColor="@color/black"
+            android:textColorHint="@color/dim_gray"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/passwordEditData" />
@@ -143,6 +148,7 @@
             android:layout_marginEnd="191dp"
             android:layout_marginBottom="98dp"
             android:text="Developed by Dheeraj Vemula"
+            android:textColorHint="@color/dim_gray"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
