--- a/app/src/main/res/layout/fragment_add_password_details.xml
+++ b/app/src/main/res/layout/fragment_add_password_details.xml
@@ -34,9 +34,10 @@
             android:layout_marginEnd="55dp"
             android:layout_marginBottom="9dp"
             android:ems="10"
-            android:textColor="@color/black"
             android:hint="Application Name"
             android:inputType="textPersonName"
+            android:textColor="@color/black"
+            android:textColorHint="@android:color/black"
             app:layout_constraintBottom_toTopOf="@+id/usernameNewData"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -51,9 +52,10 @@
             android:layout_marginEnd="54dp"
             android:layout_marginBottom="13dp"
             android:ems="10"
-            android:textColor="@color/black"
             android:hint="UserName OR EmailID"
             android:inputType="textPersonName"
+            android:textColor="@color/black"
+            android:textColorHint="@android:color/black"
             app:layout_constraintBottom_toTopOf="@+id/domainNewDta"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -68,9 +70,10 @@
             android:layout_marginEnd="60dp"
             android:layout_marginBottom="6dp"
             android:ems="10"
-            android:textColor="@color/black"
             android:hint="Domain(@gmail.com/@outlook.com)"
             android:inputType="textPersonName"
+            android:textColor="@color/black"
+            android:textColorHint="@android:color/black"
             app:layout_constraintBottom_toTopOf="@+id/passwordNewData"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
@@ -86,9 +89,10 @@
             android:layout_marginEnd="35dp"
             android:layout_marginBottom="9dp"
             android:ems="10"
-            android:textColor="@color/black"
             android:hint="Password"
             android:inputType="textPassword"
+            android:textColor="@color/black"
+            android:textColorHint="@android:color/black"
             app:layout_constraintBottom_toTopOf="@+id/urlAddNewData"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
@@ -103,9 +107,10 @@
             android:layout_marginTop="9dp"
             android:layout_marginEnd="41dp"
             android:ems="10"
-            android:textColor="@color/black"
             android:hint="URL"
             android:inputType="textPersonName"
+            android:textColor="@color/black"
+            android:textColorHint="@android:color/black"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/passwordNewData" />
@@ -155,6 +160,7 @@
             android:layout_marginEnd="113dp"
             android:layout_marginBottom="82dp"
             android:text="Developed by Dheeraj Vemula"
+            android:textColor="@color/dark_slate_gray"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
